compiler/testData/diagnostics/tests/generics/innerClasses/implicitArguments/runtimeCrashOnInnerWithImplicitInArgument.diag.txt
/runtimeCrashOnInnerWithImplicitInArgument.kt:16:23: error: Type parameter 'T' is declared as 'in' but occurs in 'out' position in type 'In<T (of class In<in T>)>.Inner'.

/runtimeCrashOnInnerWithImplicitInArgument.kt:22:49: warning: Expression is unused.
